# LHS

./: .gitignore  README.md  main.py
backend/: alembic.ini  check_db.py  check_sqlalchemy.py  pyproject.toml  schema.sql
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: __init__.py  admin.py  auth.py  lawyers.py  pages.py  practice_areas.py
backend/app/core/: config.py  logger.py  security.py  timezone.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admin.py  lawyer.py  page.py  practice_area.py
backend/app/schemas/: __init__.py  admin.py  auth.py  lawyer.py  page.py  practice_area.py
backend/scratch/: check_lawyers_data.py  debug_api.py  get_admins.py  seed_pages.py  verify_detail_api.py  verify_edit.py  verify_time.py
backend/static/uploads/: .gitkeep
frontend/: about.html  contact.html  index.html  lawyer-detail.html  lawyers.html
frontend/admin/: dashboard.html  lawyers.html  login.html  pages.html  practice-areas.html
frontend/assets/css/: admin.css  animations.css  style.css
frontend/assets/js/: animations.js  api.js  lawyers.js  main.js
frontend/assets/js/admin/: auth.js  dashboard.js  lawyers.js  pages.js  practice-areas.js
