[project]
name = "lhs-backend"
version = "1.0.0"
description = "FastAPI Backend for LHS - Lawyer Hiring System"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "alembic>=1.12.1",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "bcrypt==3.2.2",
    "tzdata>=2026.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── UV Configuration ────────────────────────────────────────────────
[tool.uv]
package = true

# ── Dev Dependencies (not shipped in production) ────────────────────
[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",           # For testing FastAPI with TestClient
    "pytest-asyncio>=0.23",
]
